ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-events
  namespace: argo-events
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: github.192.168.1.120.nip.io
    http:
      paths:
      - backend:
          serviceName: github-eventsource-svc
          servicePort: 12000
        path: /
